test/hasura/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hasura
  # namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # certmanager.k8s.io/issuer: "letsencrypt-staging"
    # certmanager.k8s.io/issuer: "letsencrypt-prod"
    # certmanager.k8s.io/acme-challenge-type: http01
spec:
  # tls:
  # - hosts:
  #   - test2.biteacon.xyz
  #   secretName: hello-kubernetes-tls
  rules:
  - host: api.dev.biteacon.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: hasura
          servicePort: 80
