test/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: test
spec:
  selector:
    app: hasura
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
